# kbb-keyboard

./: .gitignore  .gitmodules  BOM_JLCSMT.xlsx  README.md  plate.dxf
DesktopApp/Console/: DesktopMapInterface.cpp  DesktopMapInterface.h  KBBSerial.cpp  KBBSerial.h  KBBUtility.cpp  MapInterface.h
Desktop_Utility/Console/: KBB_Utility.c  KBB_Utility.cpp
Firmware/: KBB.cpp  KBB.h
Firmware/KBB/: CMakeLists.txt  KBB.cpp  KBB.h  KBB.ino  KBBDesktopAppInterface.cpp  KBBDesktopAppInterface.h  KeyboardMacroInterface.cpp  KeyboardMacroInterface.h  KeyboardMapInterface.cpp  KeyboardMapInterface.h  MacroInterface.cpp  MacroInterface.h  MapInterface.cpp  MapInterface.h  eXtensionInterface.cpp  eXtensionInterface.h
Firmware/KBB/include/: KBB.h
case_design/Inventor/: case bottom display.ipt  case_in_one_full_remake.ipt  case_in_one_p1.ipt  case_in_one_p2.ipt  case_plate_p1.ipt  case_plate_p2.ipt  foot.ipt
case_design/OldVersions/: case_in_one.0002.ipt
caseing/: case bottom.ipt  case bottom.stl  case top.ipt  case_plate.ipt  case_plate.stl
caseing/Inventor/: case_in_one.ipt  case_in_one_p1.ipt  case_in_one_p2.ipt  case_plate.ipt  case_plate_p1.ipt  case_plate_p2.ipt  case_plate_p3.ipt
caseing/OldVersions/: case top.0006.ipt  case_plate.0001.iam  (+1 more)
console_app/: DesktopMapInterface.h  KBBSerial.cpp
enter_demo/: kbb_hello_press_enter.ino
firmware/: README.md
kbb_hello_press_enter/: kbb_hello_press_enter.ino
keyboard/: battery_usb.kicad_sch  keyboard.kicad_pcb  keyboard.kicad_pro  keyboard.kicad_sch
pcb/: battery_management.kicad_sch  fp-info-cache  key_muxes.kicad_sch  keyboard.kicad_pcb  keyboard.kicad_prl  keyboard.kicad_pro  keyboard.kicad_sch  usb_hub.kicad_sch
pcb_p65_wired/: battery_management.kicad_sch  key_muxes.kicad_sch  keyboard.kicad_pcb  keyboard.kicad_pro  keyboard.kicad_sch  usb_hub.kicad_sch
pcb_p65_wireless/: battery_management.kicad_sch  keyboard-all-pos.csv  keyboard.kicad_sch  usb_hub.kicad_sch
pcb_p96_wired/: battery_management.kicad_sch  keyboard.csv  usb_hub.kicad_sch
(+66 files in other folders)
